tests/models/enum/named/isize/fail/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2.0)]
        value: isize
    },
}
fn main() {}
